Fix z-index on header

--- a/public/assets/css/default.less
+++ b/public/assets/css/default.less
@@ -135,7 +135,7 @@ header {
   height: 44px;
   position: fixed;
   top: 0;
-  z-index: 1020;
+  z-index: 1060;
   .drop-shadow(0, 2px, 7px, 0.5);
 }
 
